Fix spacing between resume header and content

--- a/app/styles/layouts/_page.scss
+++ b/app/styles/layouts/_page.scss
@@ -11,7 +11,7 @@
 }
 
 .content {
-    margin-top: spacing(5);
+    margin-top: spacing(1);
 }
 
 .left-column {
